# metodos-gran-escala

./: -la etl_001_download.ipynb  .dockerignore  .gitignore  README.md
tareas/tarea-01/: 02-modeling.ipynb  EDA_01.ipynb  Read-file.ipynb  etl_01_download.ipynb  etl_o1.py  pyproject.toml  resumen_ejecutivo_modelo_ventas.md
tareas/tarea-01/.github/: copilot-instructions.md
tareas/tarea-01/notebooks/: 02-modeling.ipynb  etl_01_download.ipynb
tareas/tarea-01/src/: prep.py
tareas/tarea-02/: README.md
tareas/tarea-03/: .gitignore  .pylintrc  README.md  Resumen_Ejecutivo.md  main.py  pyproject.toml
tareas/tarea-03/artifacts/models/: model.pkl  model_info.json
tareas/tarea-03/artifacts/reports/: metrics.json
tareas/tarea-03/notebooks/: 01_eda.ipynb
tareas/tarea-03/src/: __init__.py  config.py  etl.py  evaluate.py  features.py  logging_config.py  main.py  predict.py  train.py
tareas/tarea-04/: .dockerignore  README.md  main.py  pyproject.toml
tareas/tarea-04/artifacts/models/: model.pkl  model_info.json
tareas/tarea-04/artifacts/reports/: metrics.json
tareas/tarea-04/src/inference/: Dockerfile  __main__.py  predict.py
tareas/tarea-04/src/inference/test/: test_inference.py
tareas/tarea-04/src/logging/: logging_config.py
tareas/tarea-04/src/processing/: Dockerfile  etl.py
tareas/tarea-04/src/processing/test/: test_prep.py
tareas/tarea-04/src/training/: Dockerfile  evaluate.py  train.py
tareas/tarea-04/src/training/test/: test_train.py
tareas/tarea-05/: pyproject.toml
tareas/tarea-05/artifacts/models/: lgbm_weekly_v1_info.json
tareas/tarea-05/src/: __init__.py  config.py  logging_config.py  main.py
tareas/tarea-05/src/inference/: Dockerfile
tareas/tarea-05/src/processing/: Dockerfile  __main__.py  etl.py
tareas/tarea-05/src/training/: __main__.py
