[project]
name = "tarea-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "boto3>=1.42.44",
    "jupyterlab>=4.5.3",
    "kaggle>=1.8.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.0",
    "pylint>=4.0.4",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]
