[project]
name = "tarea-03"
version = "0.1.0"
description = "Pipeline ML production-ready (ETL -> Train -> Predict -> Evaluate) con buenas prácticas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "boto3>=1.42.44",
    "jupyterlab>=4.5.3",
    "kaggle>=1.8.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.0",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "joblib>=1.4.2",
    "kagglehub>=0.4.3",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.2.7",
    "ruff>=0.6.9",
    "pytest>=8.3.3",
]
